--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 		<script src="js/Ticker.js"></script>
 		<script src="js/Tween.js"></script>
     <script src="js/Ease.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
     <script src="js/application.js"></script>
+    
 
 	</body>
 </html>
