Move Three.js into directory

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 
-		<script src="../build/Three.js"></script>
+		<script src="js/Three.js"></script>
 
 		<script src="js/RequestAnimationFrame.js"></script>
 		<script src="js/Stats.js"></script>
